# Gudrun

./: .gitignore  CMakeLists.txt  GudrunGUI.sysparN  GudrunN.bat  GudrunN_mac.syspar  GudrunN_windows.syspar  GudrunX.bat  GudrunX_linux.syspar  GudrunX_mac.syspar  GudrunX_windows.syspar  README.md  ReleaseNotes.md  gudrunn.sh  gudrunnmac.sh  gudrunx.sh  gudrunxmac.sh  rungnuplot.sh  rungnuplotXquartz.sh  rungnuplotmac.sh  rungnuplotplot.sh  rungnuplotplotXquartz.sh  rungnuplotplotmac.sh  version
.azure-pipelines/: continuous.yml  pr.yml  release.yml
.azure-pipelines-disabled/templates/: build-linux.yml  build-osx.yml  create-release.yml  package-binaries.yml
.azure-pipelines/templates/: build-linux.yml  build-osx.yml  build-windows.yml  create-release.yml  package-binaries.yml  package-linux.yml  package-osx.yml  package-windows.yml
.github/workflows/: continuous.yml  pr.yml  release.yml
StartupFiles/: ContainerTemplatesN.txt  ContainerTemplatesX.txt
StartupFiles/D4C/: d4cdeadtime.cor  d4cvanadium.bragg  dec.dec  regd4c31.for
StartupFiles/GEM/: B022.GRP  BANKS_001M.GRP  BANKS_013M.GRP  BANKS_013XM.GRP  BANKS_014M.GRP  BANKS_023M.GRP  BANKS_024M.GRP  BANKS_033A.GRP  BANKS_033AM.GRP  BANKS_033B.GRP  BANKS_033BM.GRP  BANKS_034M.GRP  BANKS_994.GRP  BANKS_995.GRP  GEMgroups_def.dat.cal  GEMstartup.txt  banks_051m.grp.cal  gem_det_5774_021c1.calib
StartupFiles/NIMROD/: 61+9+LAB_in_rings_19Dec2011Groups.dat.cal  NIMROD 84modules+9monitor+LAB.nexus_txt  NIMROD.nexus_txt  NIMROD50modulesFromRun553Groups.dat.cal  NIMROD58modules+LAB7Aug2009Groups.dat.cal  NIMROD6.cal  NIMROD61modules+9m.cal  NIMROD61modules+9monitors(correct)+LAB8Nov2009Groups.dat.cal  NIMROD61modules+9monitors(correct)+LAB8Nov2009Groups_2.dat.cal  NIMROD61modules+9monitors(correct)+LAB8Nov2009ModuleGroups.dat.cal  NIMROD61modules+9monitors+LAB9Dec2010+LAB1columngroupGroups.dat.cal  NIMROD61modules+9monitors+LAB9Dec2010Groups_2.dat.cal  NIMROD61modules+9monitors+LAB9Dec2010columngroupGroups.dat.cal  NIMROD61modules+9monitors+LABEquatorialGroups.dat.cal  NIMROD71modules+9monitors+LAB22Feb2012Groups.dat.cal  NIMROD72modules+9monitors+LAB14May2012.txt  NIMROD72modules+9monitors+LAB14May2012Groups.dat.cal  NIMROD72modules+9monitors+LAB14May2012_calibrated.txt  NIMROD72modules+9monitors+LAB14May2012_calibrated_lateral1.txt  NIMROD72modules+9monitors+LAB14May2012_lateral1Groups.dat.cal  NIMROD72modules+9monitors+LAB14May2012_lateral2.txt  NIMROD72modules+9monitors+LAB14May2012_lateral2Groups.dat.cal  NIMROD72modules+9monitors+LAB30May2012.txt  NIMROD72modules+9monitors+LAB30May2012ModuleValues1.txt  NIMROD80modules+9monitors+LAB4Oct2012.txt  NIMROD84m.cal  NIMROD84modules+9mon.cal  NIMROD84modules+9monitors+LAB5Jun2017.txt  NIMROD84modules+9monitors+LAB5Oct2012.txt  NIMROD84modules+9monitors+LAB5Oct2012Detector.calib  NIMROD84modules+9monitors+LAB5Oct2012Groups.dat.cal  NIMRODdeadtime.cor  NIMRODdeadtimeNone.cor  NIMRODstartup.txt  nimrodvanadium.bragg  nimrodvanadium_10Dec2010_nosmooth.bragg  nimrodvanadium_16Aug2009.bragg  nimrodvanadium_cycle092.bragg  nimrodvanadium_new.bragg  nimrodvanadium_newbeam13nov2009.bragg  (+2 more)
StartupFiles/NOVA/: CalibrationFileForNOVA.calib  NOVA.nexus_txt  NOVAdeadtime.cor  NOVAgroups3.dat.cal  NOVAgroups9.dat.cal  NOVAstartup.txt  NOVAvanadium.bragg  spec.bad
StartupFiles/POLARIS/: POLARIS_115_4groups_gudrun.dat.cal  POLARIS_115_5groups_gudrun.dat.cal  POLARISstartup.txt  POLdeadtime.cor  groups_def_4.dat.cal  pol_start_dcs.txt  pol_start_old_dcs.txt  polvanadium.bragg
StartupFiles/SLS/: GNUplot.plt  SANDALS34modulesOct2023_MgO.calib  SANDALS34modulesOct2023_Si.calib  SANDALSMarch2011DetectorVer1.calib  SANDALSMarch2011Groups.dat.cal  SANDALSMarch2011InPlaneGroups.dat.cal  SANDALSMarch2011ModulesDetector.calib  SANDALSMarch2011ModulesGroups.dat.cal  SLS.nexus_txt  SLS2023-08-13.nexus_txt  SLSdeadtime.cor  SLSdeadtime_35us_Oct2023.cor  SLSstartup.txt  SLSstartup_2002.txt  groups_18.dat.cal  groups_18_clean.dat.cal  groups_18_clean2.dat.cal  slsvanadium91.bragg  slsvanadiummod.bragg  slsvanadiummod1.bragg
StartupFiles/Xray/: AgIAg5P3O10.abs  AgIAg5P3O10.brem  BeamParameters.txt  CrossSec_Compton_Balyuzi.txt  CrossSec_XCOM.txt  GNUplot.plt  XRDstartup_linux.txt  XRDstartup_windows.txt
examples/NOVA/: 014710-014713_10steps.cnt  014714_10steps.cnt  (+258 more)
src/: CMakeLists.txt  compare
src/neutron/: CMakeLists.txt  gudrun_dcs.f90  purge_det.f90
src/neutron/libGudrunN/: CMakeLists.txt  amutshield_routines.f90  attenuation_correction_routines.f90  bad_detectors.f90  beam_routines.f90  calibration_routines.f90  corrections_routines.f90  cylmultof_routines.f90  datasetlist.f90  deadtime_routines.f90  fltmultof_routines.f90  get_data_routines.f90  groups_routines.f90  histogram.f90  inputfilestrings.f90  interpolation_routines.f90  local_data.f90  math_routines.f90  merge_routines.f90  module_sums.f90  monitor_routines.f90  multiple_scattering_modules.f90  multiple_scattering_routines.f90  normalisation_routines.f90  placzek_routines.f90  process_routines.f90  ran1_routines.f90  reallocation_routines.f90  run_par.f90  runfactor_list.f90  sam_par.f90  sam_par_routines.f90  spec_baks.f90  spec_bakv.f90  spec_ratio.f90  spec_sam.f90  spec_van.f90  spectrum_par.f90  spike_routines.f90  summed_data.f90  (+4 more)
src/neutron/libget/: CMakeLists.txt  Get Routines.doc  README.libget  error_add_dummy.c  ferror_add_dummy.f  float_convert.c  float_convert.h  geniedefs.h  get_frames.for  getsect.c  int_convert.c  int_convert.h  io.f  io_old.f  libget.h  libget.txt  libget_test.f
src/xray/: CMakeLists.txt  abs_corr_azi.inc  abs_mul_routines.for  acyl.for  auxilliary_routines.for  beam.inc  calc_corrsx.for  calc_corrsx_in_out.for  calibration.inc  cylmulx_azi.for  dimension.inc  dist.for  fltabsx_azi.for  fltmulx_azi.for  forgudrun_dcs.sh  getaline.for  groups.inc  gtos.for  inputfilestrings.inc  makegtos.sh  maketest.sh  merge_arrays.inc  mul_corr_azi.inc  probe.for  run_par.inc  sam_par.inc  sumrom.for  testcalccorrsx.sh  testexpint.for  testexpinti.for  tophatsub.for
tests/: __init__.py  test_output_files.py
(+1193 files in other folders)
