add_library(gudrun
  amutshield_routines.f90
  attenuation_correction_routines.f90
  bad_detectors.f90
  beam_routines.f90
  calibration_routines.f90
  corrections_routines.f90
  cylmultof_routines.f90
  datasetlist.f90
  deadtime_routines.f90
  fltmultof_routines.f90
  get_data_routines.f90
  groups_routines.f90
  histogram.f90
  inputfilestrings.f90
  interpolation_routines.f90
  local_data.f90
  math_routines.f90
  merge_routines.f90
  module_sums.f90
  monitor_routines.f90
  multiple_scattering_modules.f90
  multiple_scattering_routines.f90
  normalisation_routines.f90
  placzek_routines.f90
  process_routines.f90
  ran1_routines.f90
  reallocation_routines.f90
  runfactor_list.f90
  run_par.f90
  sam_par.f90
  sam_par_routines.f90
  spec_baks.f90
  spec_bakv.f90
  spec_ratio.f90
  spec_sam.f90
  spectrum_par.f90
  spec_van.f90
  spike_routines.f90
  summed_data_routines.f90
  transmission_routines.f90
  van_par.f90
  write_routines.f90
)
if(GUDPY)
  target_compile_options(gudrun PUBLIC -cpp)
endif(GUDPY)
if(BUILD_HDF5)
  add_dependencies(gudrun HDF5)
endif(BUILD_HDF5)
